# dspy-qdrant

./: README.md  pyproject.toml
src/dspy_qdrant/: __init__.py  qdrant_rm.py
